--- a/frameofreference.html
+++ b/frameofreference.html
@@ -4,11 +4,40 @@
     <meta charset="UTF-8">
     <title>Frame of Reference</title>
     <link rel="stylesheet" href="frameofreference.css" type="text/css">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
   <body>
-    <p>hi</p>
+    <svg id="cars" width="1000" height="550" draggable="false">
+    	<line x1="0" y1="100" x2="1000" y2="100" stroke-width="10px" stroke="#000"/>
+    	<line x1="0" y1="500" x2="1000" y2="500" stroke-width="10px" stroke="#000"/>
+    	<line x1="0" y1="300" x2="1000" y2="300" stroke-width="10px" stroke="#000" stroke-dasharray="5"/>
+    	<line id="car1connect" x1="105" y1="55" x2="150" y2="200" stroke-width="3px" stroke="#000" />
+    	<line id="car2connect" x1="105" y1="55" x2="150" y2="400" stroke-width="3px" stroke="#000" />
+    	<g id="car1" transform="translate(150, 200)">
+    		<ellipse cx="0" cy="0" rx="100" ry="50" fill="#f00" stroke-width="3px" stroke="#000"/>
+    		<text x="-33" y="-30" font-family="Open Sans"><tspan dy="0.6em">Distance:</tspan><tspan id="car1distance" dy="3em" x="-13">5</tspan>m</text>
+    	</g>
+    	<g id="car2" transform="translate(150, 400)">
+    		<ellipse cx="0" cy="0" rx="100" ry="50" fill="#0f0" stroke-width="3px" stroke="#000"/>
+    		<text x="-33" y="-30" font-family="Open Sans"><tspan dy="0.6em">Distance:</tspan><tspan id="car2distance" dy="3em" x="-13">5</tspan>m</text>
+    	</g>
+    	<g id="referencepoint" transform="translate(50, 300)">
+    		<line x1="0" y1="0" x2="20" y2="-20" stroke-width="3px" stroke="#000"/>
+    		<line x1="20" y1="-20" x2="160" y2="-20" stroke-width="3px" stroke="#000"/>
+    		<text x="20" y="-25" font-family="Open Sans">Point of Reference</text>
+    		<ellipse id="point" cx="0" cy="0" rx="10" ry="10" fill="#ff0" stroke-width="3px" stroke="#000"/>
+    	</g>
+    </svg>
+    <div id="buttondiv">
+    	<button id="gobutton" class="inlinebutton">Go</button>
+    	<button id="stopbutton" class="inlinebutton" disabled>Stop</button>
+    	<button id="resetbutton" class="inlinebutton">Reset</button>
+    	<button id="snapcar1">Point of Reference on Car 1</button>
+    	<button id="snapcar2">Point of Reference on Car 2</button>
+    	<button id="snapcarnone" disabled>Free Point of Reference</button>
+    	<p id="elapsedp" class="hidden">Time elapsed: <span id="elapsed">0</span> seconds</p>
+    </div>
     <script src="frameofreference.js"></script>  
   </body>
 </html>
